crates/parser/tests/snapshots/comment_after_close_brace.snap
---
source: crates/parser/tests/snapshots.rs
---
# comment-after-close-brace

## Input

```
s {
  k v
}
# after close

```

## CST

```
SOURCE_FILE@0..26
  PREFIX_BLOCK@0..12
    WORD_KEY@0..1
      WORD@0..1 "s"
    SPACE@1..2 " "
    OPEN_BRACE@2..3 "{"
    NEWLINE@3..4 "\n"
    SPACE@4..6 "  "
    ENTRY@6..10
      WORD_KEY@6..7
        WORD@6..7 "k"
      SPACE@7..8 " "
      LINE_STRING@8..9
        STRING@8..9 "v"
      NEWLINE@9..10 "\n"
    CLOSE_BRACE@10..11 "}"
    NEWLINE@11..12 "\n"
  COMMENT@12..25
    SHARP@12..13 "#"
    SPACE@13..14 " "
    WORD@14..19 "after"
    SPACE@19..20 " "
    WORD@20..25 "close"
  NEWLINE@25..26 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..1 "s",
            },
            open_brace: OPEN_BRACE@2..3 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@6..7 "k",
                    },
                    value: LineString {
                        string: STRING@8..9 "v",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@10..11 "}",
        },
    ],
}
```

vim:ft=markdown
