crates/parser/tests/snapshots/comment_between_blocks.snap
---
source: crates/parser/tests/snapshots.rs
---
# comment-between-blocks

## Input

```
a {
  x 1
}
# between
b {
  y 2
}

```

## CST

```
SOURCE_FILE@0..34
  PREFIX_BLOCK@0..12
    WORD_KEY@0..1
      WORD@0..1 "a"
    SPACE@1..2 " "
    OPEN_BRACE@2..3 "{"
    NEWLINE@3..4 "\n"
    SPACE@4..6 "  "
    ENTRY@6..10
      WORD_KEY@6..7
        WORD@6..7 "x"
      SPACE@7..8 " "
      INTEGER@8..9
        NUMERAL@8..9 "1"
      NEWLINE@9..10 "\n"
    CLOSE_BRACE@10..11 "}"
    NEWLINE@11..12 "\n"
  COMMENT@12..21
    SHARP@12..13 "#"
    SPACE@13..14 " "
    WORD@14..21 "between"
  NEWLINE@21..22 "\n"
  PREFIX_BLOCK@22..34
    WORD_KEY@22..23
      WORD@22..23 "b"
    SPACE@23..24 " "
    OPEN_BRACE@24..25 "{"
    NEWLINE@25..26 "\n"
    SPACE@26..28 "  "
    ENTRY@28..32
      WORD_KEY@28..29
        WORD@28..29 "y"
      SPACE@29..30 " "
      INTEGER@30..31
        NUMERAL@30..31 "2"
      NEWLINE@31..32 "\n"
    CLOSE_BRACE@32..33 "}"
    NEWLINE@33..34 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..1 "a",
            },
            open_brace: OPEN_BRACE@2..3 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@6..7 "x",
                    },
                    value: Integer {
                        sign: none,
                        numeral: NUMERAL@8..9 "1",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@10..11 "}",
        },
        PrefixBlock {
            key: WordKey {
                word: WORD@22..23 "b",
            },
            open_brace: OPEN_BRACE@24..25 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@28..29 "y",
                    },
                    value: Integer {
                        sign: none,
                        numeral: NUMERAL@30..31 "2",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@32..33 "}",
        },
    ],
}
```

vim:ft=markdown
