crates/parser/tests/snapshots/comment_consecutive.snap
---
source: crates/parser/tests/snapshots.rs
---
# comment-consecutive

## Input

```
# one
# two
# three
a 1

```

## CST

```
SOURCE_FILE@0..24
  COMMENT@0..5
    SHARP@0..1 "#"
    SPACE@1..2 " "
    WORD@2..5 "one"
  NEWLINE@5..6 "\n"
  COMMENT@6..11
    SHARP@6..7 "#"
    SPACE@7..8 " "
    WORD@8..11 "two"
  NEWLINE@11..12 "\n"
  COMMENT@12..19
    SHARP@12..13 "#"
    SPACE@13..14 " "
    WORD@14..19 "three"
  NEWLINE@19..20 "\n"
  ENTRY@20..24
    WORD_KEY@20..21
      WORD@20..21 "a"
    SPACE@21..22 " "
    INTEGER@22..23
      NUMERAL@22..23 "1"
    NEWLINE@23..24 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@20..21 "a",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@22..23 "1",
            },
        },
    ],
}
```

vim:ft=markdown
