crates/parser/tests/snapshots/comment_deeply_indented.snap
---
source: crates/parser/tests/snapshots.rs
---
# comment-deeply-indented

## Input

```
        # deep comment
k v

```

## CST

```
SOURCE_FILE@0..27
  SPACE@0..8 "        "
  COMMENT@8..22
    SHARP@8..9 "#"
    SPACE@9..10 " "
    WORD@10..14 "deep"
    SPACE@14..15 " "
    WORD@15..22 "comment"
  NEWLINE@22..23 "\n"
  ENTRY@23..27
    WORD_KEY@23..24
      WORD@23..24 "k"
    SPACE@24..25 " "
    LINE_STRING@25..26
      STRING@25..26 "v"
    NEWLINE@26..27 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@23..24 "k",
            },
            value: LineString {
                string: STRING@25..26 "v",
            },
        },
    ],
}
```

vim:ft=markdown
