crates/parser/tests/snapshots/comment_hash_at_eof.snap
---
source: crates/parser/tests/snapshots.rs
---
# comment-hash-at-eof

## Input

```
key value
#
```

## CST

```
SOURCE_FILE@0..11
  ENTRY@0..10
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    LINE_STRING@4..9
      STRING@4..9 "value"
    NEWLINE@9..10 "\n"
  COMMENT@10..11
    SHARP@10..11 "#"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: LineString {
                string: STRING@4..9 "value",
            },
        },
    ],
}
```

vim:ft=markdown
